tests/outref/TSC00I.ref

-- TSC00I : select without a from with a syntax error

select * asdfasdfsdf;

[ERROR]: ERR_SELECT_STAR_NO_TABLES: SELECT * with no tables specified is not valid
LINE 3:1: select * asdfasdfsdf;
                 ^
